--- a/style.css
+++ b/style.css
@@ -105,3 +105,73 @@ section{
     padding: 20px;
 }
 /*  plans ends */
+
+/* Images Items  start*/
+
+.img-item{
+    margin-top: 40px;
+    margin-left: 90px;
+    margin-bottom: 20px;
+    height: 300px;
+    background-image: url('./images/watch.png');
+    background-repeat: no-repeat;
+    
+}
+.img-title{
+    color: white;
+    font-size: 40px;
+    padding-left: 30px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+}
+.img-button{
+    height: 45px;
+    width: 120px;
+    color: #005FAC;
+    background: white;
+    border: none;
+    border-radius: 4px;
+    margin-left: 40px;
+}
+.img-item{
+    font-size: 5px;
+    padding-left: 20px;
+}
+/* Images Items end */
+
+/* Footer start */
+
+.footer{
+     margin-top: 150px;
+     padding: 100px 15%;
+     background: #333;
+     color: white;
+     display: flex;
+     justify-content: space-between;
+}
+.fotter-title{
+    font-size: 40px;
+}
+.footer-right{
+    align-items: center;
+}
+.right-title{
+    font-size: 40px;
+}
+.email{
+    height: 40px;
+    width: 250px;
+    color: white;
+    border: 1px solid #F3F3F3;
+    border-radius: 5px;
+    background: #333;
+
+}
+.submit{
+    height: 45px;
+    width: 120px;
+    background: #005FAC;
+    color: white;
+    border-radius: 5px;
+}
+/* Footer End */
